--- a/flatcar/keep.yml
+++ b/flatcar/keep.yml
@@ -11,6 +11,27 @@ passwd:
       groups: [ wheel, docker ,sudo]
 storage:
   files:
+    - path:       "/etc/hostname"
+      mode:       0644
+      contents:
+        inline: kube1
+    - path:       "/etc/hosts"
+      mode:       0644
+      contents:
+        inline: |
+          127.0.0.1 localhost
+          ::1       localhost
+          10.10.20.12 kube1.lelcukh.com kube1
+    - path: /etc/systemd/network/00-eth0.network
+      contents:
+        inline: |
+          [Match]
+          Name=eth0
+
+          [Network]
+          DNS=10.10.20.1
+          Address=10.10.20.11/24
+          Gateway=10.10.20.1
     - path: /opt/bin/kubectl
       mode: 0755
       contents:
@@ -54,22 +75,4 @@ systemd:
             [Service]
             ExecStart=
             ExecStart=/opt/bin/kubelet $KUBELET_KUBECONFIG_ARGS $KUBELET_CONFIG_ARGS $KUBELET_KUBEADM_ARGS $KUBELET_EXTRA_ARGS
-    - name: kubeadm.service
-      enabled: true
-      contents: |
-        [Unit]
-        Description=Kubeadm service
-        Requires=containerd.service
-        After=containerd.service
-        ConditionPathExists=!/etc/kubernetes/kubelet.conf
 
-        [Service]
-        Environment="PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/opt/bin"
-        ExecStartPre=/opt/bin/kubeadm config images pull
-        ExecStartPre=/opt/bin/kubeadm init --config /etc/kubeadm.yml
-        ExecStartPre=/usr/bin/mkdir /home/core/.kube
-        ExecStartPre=/usr/bin/cp /etc/kubernetes/admin.conf /home/core/.kube/config
-        ExecStart=/usr/bin/chown -R core:core /home/core/.kube
-
-        [Install]
-        WantedBy=multi-user.target        
